# master-thesis

./: LICENSE  newFile.txt
Models for experimenting/1. raw cloud/: casa_raw.ply
Models for experimenting/10. graspit_wrl/: casa_graspit.wrl  flasa_graspit.wrl  spuzva_graspit.wrl  ubrus_graspit.wrl  upravljac_graspit.wrl
Models for experimenting/11. grabs/: grab_casa.xml  grab_flasa.xml  grab_spuzva.xml  grab_ubrus.xml  grab_upravljac.xml
Models for experimenting/2. no ground/: casa_ng.ply  flasa_ng.ply  spuzva_ng.ply  ubrus_ng.ply  upravljac_ng.ply
Models for experimenting/3. filtered/: casa_filtered.ply  flasa_filtered.ply  spuzva_filtered.ply  ubrus_filtered.ply  upravljac_filtered.ply
Models for experimenting/4. smoothed/: casa_smoothed.ply  flasa_smoothed.ply  spuzva_smoothed.ply  ubrus_smoothed.ply  upravljac_smoothed.ply
Models for experimenting/5. mesh/: casa_mesh.ply  flasa_mesh.ply  spuzva_mesh.ply  ubrus_mesh.ply  upravljac_mesh.ply
Models for experimenting/6. convex/: casa_convex.ply  flasa_convex.ply  spuzva_convex.ply  ubrus_convex.ply  upravljac_convex.ply
Models for experimenting/7. transformed/: casa_transformed.ply  flasa_transformed.ply  spuzva_transformed.ply  ubrus_transformed.ply  upravljac_transformed.ply
Models for experimenting/8. mesh_transformed/: casa_mt.ply  flasa_mt.ply  spuzva_mt.ply  ubrus_mt.ply  upravljac_mt.ply
Models for experimenting/9. haf/: casa_haf.pcd  flasa_haf.pcd  (+3 more)
algorithm/: CMakeLists.txt  package.xml
algorithm/src/: algorithm.cpp
get_mesh/: CMakeLists.txt  package.xml
get_mesh/src/: get_mesh.cpp
